Update articles and role description

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
-    <title>João Ramos – Design manager & mentor</title>
+    <title>João Ramos – Design leader</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="I’m a design manager and mentor who guides teams using systems thinking and a dash of humour">
+    <meta name="description" content="I’m a design leader who guides teams using systems thinking and a dash of humour">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="2shu_KfJ0xhCJ4fWUc_Qqf7iPCXsiRnuEYhLqgjzZq8" />
     <meta name="cf-2fa-verify" content="7becfc173519c75">
@@ -21,17 +21,17 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@joaotiago" />
-    <meta name="twitter:title" content="João Ramos – Design manager & mentor" />
-    <meta name="twitter:description" content="I’m a design manager and mentor who guides teams using systems thinking and a dash of humour" />
+    <meta name="twitter:title" content="João Ramos – Design leader" />
+    <meta name="twitter:description" content="I’m a design leader who guides teams using systems thinking and a dash of humour" />
     <meta name="twitter:image" content="https://joao.pt/images/profile.jpg" />
     <meta name="twitter:url" content="https://joao.pt" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="João Ramos – Design manager & mentor" />
+    <meta property="og:title" content="João Ramos – Design leader" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://joao.pt/" />
     <meta property="og:image" content="https://joao.pt/images/profile.jpg" />
-    <meta property="og:description" content="I’m a design manager and mentor who guides teams using systems thinking and a dash of humour" />
+    <meta property="og:description" content="I’m a design leader who guides teams using systems thinking and a dash of humour" />
 
     <!-- Mobile -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -53,11 +53,11 @@
   </head>
   <body>
     <section>
-      <h1>I’m a design manager and mentor who guides teams using systems thinking and a dash of humour</h1>
+      <h1>I’m a design leader who guides teams using systems thinking and a dash of humour</h1>
       
       <div class="wrapper triad">
-        <p class="heading">At work, I'm at my best enabling my teams, connecting stakeholders with diagrams and design decks, and resolving ambiguity</p>
-        <p>I'm based in Berlin (Germany) with my wife, daughters, and <a href="https://www.instagram.com/itsgloriathedog/" data-umami-event="mutt" target="_blank">mutt</a>, and I have a knack for watching sunrises, reading about anthropology, riding boards, asking difficult questions, and making music and videos.</p>
+        <p class="heading">At work, I'm at my best enabling my teams and community, connecting stakeholders with diagrams and design decks, and resolving ambiguity</p>
+        <p>I'm based in Berlin (Germany) with my wife, daughters, and <a href="https://www.instagram.com/itsgloriathedog/" data-umami-event="mutt" target="_blank">mutt</a>, and I have a knack for watching sunrises, reading history and anthropology, riding boards, asking difficult questions, and making music and videos.</p>
       </div>
       
       <div class="wrapper triad">
@@ -107,7 +107,7 @@
         </div>
         <div class="profile block">
           <h3>Profile</h3>
-          <p>Over the last decade I hopped between the roles of embedded product designer, project and design lead, and design manager.</p>
+          <p>Over the last 15 years I hopped between the roles of embedded product designer, project and design lead, and design manager.</p>
           <p>Lately, I've been focusing on strategy, design leadership and culture, and resolving ambiguity across different teams and business units.</p>
         </div>
       </div>
@@ -129,8 +129,8 @@
           <h3>Selected writing</h3>
           <ol>
             <li class="zalando">
-              <em><a href="https://medium.com/zalando-design/a-day-of-bringing-out-the-best-in-others-5ab8a6831049" data-umami-event="article-zalando" target="_blank">A day of bringing out the best in others</a></em>
-              <span>Step into the shoes of Senior Product Designer and passionate mentor, João Ramos, who leads projects in our Customer Acquisition Experience team.</span>
+              <em><a href="" data-umami-event="article-zalando" target="_blank">5 tips to master the fine art of stakeholder management and cultivate success</a></em>
+              <span>Zalando product design community members share their honed stakeholder management approaches, from the interpersonal to the strategic.</span>
             </li>
             <li class="uxplanet">
               <em><a href="https://uxplanet.org/five-books-that-helped-me-become-a-better-product-designer-6fd366ce8395?source=friends_link&sk=eed2614428725420af4219d0f1888b88" data-umami-event="article-uxplanet" target="_blank">Five books that helped me become a better Product Designer</a></em>
