Add umami again

--- a/index.html
+++ b/index.html
@@ -40,15 +40,7 @@
     <meta name="mobile-web-app-capable" content="yes">
 
     <!-- Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6HKL7LLJ0J"></script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JN84W63VCK"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-JN84W63VCK');
-    </script>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="384c6443-3d1e-488d-8a3f-017ba74cd5f1"></script>
 
   </head>
   <body>
