--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
-    <title>João Ramos – Design leader</title>
+    <title>João Ramos – Senior Design Leader</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="I’m a design leader who guides teams using systems thinking and a dash of humour">
+    <meta name="description" content="I’m a hands-on senior design leader who guides teams from vision to execution">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="2shu_KfJ0xhCJ4fWUc_Qqf7iPCXsiRnuEYhLqgjzZq8" />
     <meta name="cf-2fa-verify" content="7becfc173519c75">
@@ -21,17 +21,17 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@joaotiago" />
-    <meta name="twitter:title" content="João Ramos – Design leader" />
-    <meta name="twitter:description" content="I’m a design leader who guides teams using systems thinking and a dash of humour" />
+    <meta name="twitter:title" content="João Ramos – Senior Design Leader" />
+    <meta name="twitter:description" content="I’m a hands-on senior design leader who guides teams from vision to execution" />
     <meta name="twitter:image" content="https://joao.pt/images/profile.jpg" />
     <meta name="twitter:url" content="https://joao.pt" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="João Ramos – Design leader" />
+    <meta property="og:title" content="João Ramos – Senior Design Leader" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://joao.pt/" />
     <meta property="og:image" content="https://joao.pt/images/profile.jpg" />
-    <meta property="og:description" content="I’m a design leader who guides teams using systems thinking and a dash of humour" />
+    <meta property="og:description" content="I’m a hands-on senior design leader who guides teams from vision to execution" />
 
     <!-- Mobile -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -45,11 +45,11 @@
   </head>
   <body>
     <section>
-      <h1>I’m a design leader who guides teams using systems thinking and a dash of humour</h1>
+      <h1>I’m a hands-on senior design leader who guides teams from vision to execution</h1>
       
       <div class="wrapper triad">
-        <p class="heading">At work, I'm at my best enabling my teams and community, connecting stakeholders with diagrams and design decks, and resolving ambiguity</p>
-        <p>I'm based in Berlin (Germany) with my wife, daughters, and <a href="https://www.instagram.com/itsgloriathedog/" data-umami-event="mutt" target="_blank">mutt</a>, and I have a knack for watching sunrises, reading history and anthropology, riding boards, asking difficult questions, and making music and videos.</p>
+        <p class="heading">In my experience in leadership, I built teams and design functions from the ground up, upheld quality at scale, and helped senior executives navigate uncertainty through both my strategic and tactical work.</p>
+        <p>I'm based in Kreuzberg (Berlin, Germany) with my wife, daughters, and <a href="https://www.instagram.com/itsgloriathedog/" data-umami-event="mutt" target="_blank">mutt</a>, and I have a knack for watching sunrises, reading history and anthropology, riding boards, asking difficult questions, and making music and videos.</p>
       </div>
       
       <div class="wrapper triad">
@@ -99,8 +99,8 @@
         </div>
         <div class="profile block">
           <h3>Profile</h3>
-          <p>Over the last 15 years I hopped between the roles of embedded product designer, project and design lead, and design manager.</p>
-          <p>Lately, I've been focusing on strategy, design leadership and culture, and resolving ambiguity across different teams and business units.</p>
+          <p>My role is both tactical and outlook oriented, so I hop between hands-on and strategic work frequently – as situations demand. My mission is to help people perform at their best, grow in the right direction, and succeed autonomously.</p>
+          <!-- <p>Lately, I've been focusing on foresight work work, closing strategic gaps in Zalando's design community, and resolving ambiguity across different teams and business units.</p> -->
         </div>
       </div>
     </section>
