Add nav, fix text formatting

--- a/index.html
+++ b/index.html
@@ -35,15 +35,20 @@
 
   </head>
   <body>
+    <nav class="wrapper">
+      <div class="name">
+        <img src="images/profile.png" alt="" />
+        <span>João Ramos</span>
+      </div>
+    </nav> 
+
     <header class="wrapper">
-      <img src="images/profile.png" alt="" />
-      
       <h1>I’m João, a <em>hands-on senior design leader</em> who guides teams <em>from vision to execution</em>.</h1>
     </header>
     
     <section class="wrapper">
-      <p>I live in Kreuzberg (Berlin, Germany) with my wife, two daughters, Gloria, and a reprehensible amount of books, caps, and music instruments. A perfect day for me includes family time, time for myself, espresso, playing music, ancient and medieval History, foraging, and the Atlantic ocean.</p>
-      <p>I work at Zalando as a Design Manager. Previously at n8n, Contentful, and SumUp. Portfolio and CV available upon request. Give me a shout at hello@joao.pt, or find me on Instagram or LinkedIn.</p>
+      <p>I live in Kreuzberg (Berlin, Germany) with my wife, two daughters, <a href="https://www.instagram.com/itsgloriathedog/" target="_blank">Gloria</a>, and a reprehensible amount of books, caps, and music instruments. A perfect day for me includes family time, time for myself, espresso, playing music, ancient and medieval History, foraging, and the Atlantic ocean.</p>
+      <p>I work at Zalando as a Design Manager. Previously at n8n, Contentful, and SumUp. Portfolio and CV available upon request. Give me a shout at <em>hel<span>lo<script>document.write('@');</script>jo</span>ao.p<span>oops</span>t</em>, or find me on <a href="https://www.instagram.com/hey.joao.pt" target="_blank">Instagram</a> or <a href="https://linkedin.com/in/johnzramos" target="_blank">LinkedIn</a>.</p>
     </section>
 </body>
 </html>
