--- a/index.html
+++ b/index.html
@@ -37,18 +37,14 @@
   <body>
     <nav class="wrapper">
       <div class="name">
-        <img src="images/profile.png" alt="" />
-        <span>João Ramos</span>
+        <img src="images/profile.png" alt="Profile picture of João" />
       </div>
     </nav> 
 
     <header class="wrapper">
       <h1>I’m João, a <em>hands-on senior design leader</em> who guides teams <em>from vision to execution</em>.</h1>
+      <h2>I live in Kreuzberg (Berlin, Germany) with my wife, two daughters, <a href="https://www.instagram.com/itsgloriathedog/" target="_blank" data-umami-event="Gloria" title="Instagram profile of Gloria" tabindex="1">Gloria</a>, and a reprehensible amount of books, caps, and music instruments. Currently, I'm a Design Manager at Zalando. Previously at n8n, Contentful  , and SumUp. Portfolio and CV available upon request. Give me a shout at <span class="e"><em>hel<span>lo<script>document.write('@');</script>jo</span>ao.p<span>oops</span>t</em></span>, or find me on <a href="https://www.instagram.com/hey.joao.pt" target="_blank" data-umami-event="Instagram" title="Instagram profile of João" tabindex="2">Instagram</a> and <a href="https://linkedin.com/in/johnzramos" target="_blank" data-umami-event="LinkedIn" title="LinkedIn profile of João" tabindex="3">LinkedIn</a>.</h2>
     </header>
-    
-    <section class="wrapper">
-      <p>I live in Kreuzberg (Berlin, Germany) with my wife, two daughters, <a href="https://www.instagram.com/itsgloriathedog/" target="_blank">Gloria</a>, and a reprehensible amount of books, caps, and music instruments. A perfect day for me includes family time, time for myself, espresso, playing music, ancient and medieval History, foraging, and the Atlantic ocean.</p>
-      <p>I work at Zalando as a Design Manager. Previously at n8n, Contentful, and SumUp. Portfolio and CV available upon request. Give me a shout at <em>hel<span>lo<script>document.write('@');</script>jo</span>ao.p<span>oops</span>t</em>, or find me on <a href="https://www.instagram.com/hey.joao.pt" target="_blank">Instagram</a> or <a href="https://linkedin.com/in/johnzramos" target="_blank">LinkedIn</a>.</p>
-    </section>
+
 </body>
 </html>
